gobmkida/c2/safety_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/safety_to_string/src/engine/printutils.c:807:8: error: use of undeclared identifier 'off_496638'
return off_496638[status]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/safety_to_string/src/obj/1/printutils.o] Error 1
